Revert "fixed The jar type of java task shell script error"
This reverts commit 04825b9bc87e6cb122a7d0ef3398308f825eb50b.